# Differentiable-MC

./: .gitignore  pyproject.toml  sweep.ps1
premia/: barrier.json
scripts/: barrier_call_hedging.py  barrier_hedging.py  barrier_hedging_analysis.py  barrier_put_hedging.py  plot_pnl_hist.py  process.py  write_hedge_ratios.py  write_plots.py  write_tables.py
src/dmc/control/: controller.py  mlp_controller.py
src/dmc/feature_extraction/: barrier_feature_extractor.py  feature_extractor.py
src/dmc/hedging/: hedge_result.py  hedging.py
src/dmc/models/: heston.py  model.py
src/dmc/products/: barrier_option.py  product.py
src/dmc/risk/: cvar.py  mse.py  risk_measure.py
src/dmc/simulation/: measure.py  simulation_grid.py  simulation_result.py  simulation_state.py
src/dmc/training/: hedging_trainer.py
